Ref #548: Allow to create a cxfrs endpoint in blueprint (#552)
## Motivation

For now, it is not possible to create a cxfrs endpoint using blueprint as we end up with a `ClassNotFoundException`

## Modifications:

* Add an integration test that reproduces the issue
* Add a class for removal corresponding to what [`camel-cxf-rest` expects](https://github.com/apache/camel/blob/main/components/camel-cxf/camel-cxf-rest/src/main/java/org/apache/camel/component/cxf/jaxrs/CxfRsComponent.java#L124-L126) until it is fixed in Camel
* Move all blueprint-related classes of CXF into `camel-cxf-blueprint` to prevent split packages
* Add all  blueprint-related schemas of CXF to `camel-cxf-blueprint`
* Add the maven property `camel.karaf.test.additional.imports` to add import packages to the test bundle
* Add the maven property `camel.karaf.test.fragment.host` to set the fragment host of the test bundle